@@ -1,5 +1,9 @@
 Thu May 27 2004  Joe Allen <jhallen@world.std.com>
 
+	Fix segfault due to bad management of 'pieces' in rc/setopt().
+
+Thu May 27 2004  Joe Allen <jhallen@world.std.com>
+
 	Added asm.jsf.in.
 
 
